[MD settings] UMA and RevocationReporter in site settings

This CL adds UMA and Revocation reporting from site settings when a site
exception is added or removed. The goal is to match the behavior of the
old options.

BUG=718544

Review-Url: https://codereview.chromium.org/2861793005
Cr-Commit-Position: refs/heads/master@{#469561}

Former-commit-id: b1c163ea6bf56b21576bed89fcf4162eebb2ab91